--- a/bpDemo/src/main/resources/static/podstranice/showObjectPage.html
+++ b/bpDemo/src/main/resources/static/podstranice/showObjectPage.html
@@ -1,9 +1,11 @@
 <div class="showObjectDiv" class="row">
   <div class="row light-blue">
-    <div class="row">
-        <div class="col s4 m4" ng-repeat="metaData in showObjectCtrl.meta">
-          <h1><h4 class="white-text">Ime podataka : {{metaData.metaDataColumnName}}</h4></h1>
-          <p class="white-text">Vrijednost podatka : {{metaData.metaDataValue}}</p>
+    <div class="row" ng-repeat="metaData in showObjectCtrl.meta">
+        <div class="col s6 m6">
+          <h4 class="deep-orange-text">{{metaData.metaDataColumnName}}:</h4>
+          </div>
+          <div class="col s6 m6">
+          <h4 class="white-text" style="word-break:break-word;"> {{metaData.metaDataValue}}</h4>
         </div>
       </div>
   </div>
