--- a/bpDemo/src/main/resources/static/podstranice/showObjectsPage.html
+++ b/bpDemo/src/main/resources/static/podstranice/showObjectsPage.html
@@ -4,10 +4,10 @@
         <div class="col s4 m3" ng-repeat="object in showObjectsCtrl.objectNames">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-              <span class="card-title">{{object}}</span>
+              <div id="data"><span class="truncate" class="card-title">{{object}}</span></div>
             </div>
             <div class="card-action">
-              <a class="btn-floating halfway-fab waves-effect waves-light deep-orange" ng-click="showObjectsCtrl.showObject(object)"><i class="material-icons">search</i></a>
+              <a class="btn-floating halfway-fab waves-effect waves-light deep-orange" style="word-break:break-word;" ng-click="showObjectsCtrl.showObject(object)"><i class="material-icons">search</i></a>
             </div>
           </div>
         </div>
