let's make it reactive, but not refresh every parameter mmmm

--- a/bpDemo/src/main/resources/static/index.html
+++ b/bpDemo/src/main/resources/static/index.html
@@ -48,7 +48,9 @@
     <script src="controllers/showObjectsController.js" charset="utf-8"></script>
     <script src="controllers/showObjectController.js" charset="utf-8"></script>
     <script src="controllers/createTriggerController.js" charset="utf-8"></script>
+    <script src="controllers/createViewController.js" charset="utf-8"></script>
     <script src="services/registrationValidationService.js" charset="utf-8"></script>
+    <script src="services/createViewValidationService.js" charset="utf-8"></script>
     <script src="services/createTriggerValidationService.js" charset="utf-8"></script>
   </body>
 </html>
