--- a/bpDemo/src/main/resources/static/podstranice/showObjectsPage.html
+++ b/bpDemo/src/main/resources/static/podstranice/showObjectsPage.html
@@ -8,6 +8,7 @@
             </div>
             <div class="card-action">
               <a class="btn-floating halfway-fab waves-effect waves-light deep-orange" style="word-break:break-word;" ng-click="showObjectsCtrl.showObject(object)"><i class="material-icons">search</i></a>
+              <a class="btn halfway-fab waves-effect waves-light deep-orange" style="word-break:break-word;" ng-click="showObjectsCtrl.addIndex(object)"><i class="material-icons">add</i></a>
             </div>
           </div>
         </div>
