--- a/bpDemo/src/main/resources/static/index.html
+++ b/bpDemo/src/main/resources/static/index.html
@@ -48,9 +48,11 @@
     <script src="controllers/showObjectsController.js" charset="utf-8"></script>
     <script src="controllers/showObjectController.js" charset="utf-8"></script>
     <script src="controllers/createTriggerController.js" charset="utf-8"></script>
+    <script src="controllers/createIndexController.js" charset="utf-8"></script>
     <script src="controllers/createViewController.js" charset="utf-8"></script>
     <script src="services/registrationValidationService.js" charset="utf-8"></script>
     <script src="services/createViewValidationService.js" charset="utf-8"></script>
     <script src="services/createTriggerValidationService.js" charset="utf-8"></script>
+    <script src="services/createIndexValidationService.js" charset="utf-8"></script>
   </body>
 </html>
