--- a/bpDemo/src/main/resources/static/podstranice/createViewPage.html
+++ b/bpDemo/src/main/resources/static/podstranice/createViewPage.html
@@ -1,5 +1,15 @@
 <div class="triggerDiv" class="row">
   <div class="row light-blue">
+    <div id="modal1" ng-class="viewCtrl.modal" style="z-index: 1003;display: block;opacity: 1;transform: scaleX(1);top: 10%;" ng-show="viewCtrl.createViewSuccess.showModal">
+      <div class="modal-content">
+        <h4>{{viewCtrl.createViewSuccess.headerResponse}}</h4>
+        <p>{{viewCtrl.createViewSuccess.paragraphResponse}}</p>
+      </div>
+      <div class="modal-footer">
+        <button data-target="modal1" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="viewCtrl.zatvoriModal()">OK</button>
+      </div>
+    </div>
+
     <div class="light-blue darken-1 z-depth-1">
       <h1>
         <h5 class="center grey-text text-lighten-4">Kreiranje pogleda</h5>
