Purple(indigo) rain(snow)

--- a/bpDemo/src/main/resources/static/index.html
+++ b/bpDemo/src/main/resources/static/index.html
@@ -18,12 +18,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
 <body>
-  <div class="row light-blue darken-2" class="container" ng-app='bpDemo'>
-    <div class="row light-blue darken-2"></div>
-    <nav class="col s12 m12 light-blue z-depth-5" ng-controller="navBarController">
+  <div class="row dark-primary-color darken-2" class="container" ng-app='bpDemo'>
+    <div class="row default-primary-color darken-2"></div>
+    <nav class="col s12 m12 default-primary-color z-depth-5" ng-controller="navBarController">
       <div>
-        <div class="nav-wrapper light-blue">
-          <a href="#!" class="col offset-s1 offset-m1 brand-logo left">Logo</a>
+        <div class="nav-wrapper text-primary-color light-primary-color">
+          <a href="#!" class="col offset-s1 offset-m1 brand-logo left">BP007</a>
           <ul class="right hide-on-med-and-down" ng-show="!logedData.loged">
             <li><a href="#/login">Prijava</a></li>
             <li><a href="#/registration">Registracija</a></li>
