--- a/bpDemo/src/main/resources/static/podstranice/addTablePage.html
+++ b/bpDemo/src/main/resources/static/podstranice/addTablePage.html
@@ -1,9 +1,9 @@
 <div class="addTableDiv" class="row">
-  <div class="row light-blue">
-    <div class="light-blue darken-1 z-depth-2">
+  <div class="row dark-primary-color">
+    <div class="default-primary-color darken-1 z-depth-2">
       <h1>
-        <h4 class="center grey-text text-lighten-4">
-          <h5 class="center grey-text text-lighten-4">Molimo unesite sve podatke za tabelu</h5>
+        <h4 class="center text-primary-color text-lighten-4">
+          <h5 class="center text-primary-color text-lighten-4">Molimo unesite sve podatke za tabelu</h5>
         </h4>
       </h1>
     </div>
@@ -14,7 +14,7 @@
             <div class="col s12 m12">
               <div class="col s6 m3 offset-s4 offset-m4 text-lighten-4 input-field">
                 <input id="table_name" type="text" class="validate grey lighten-3" ng-model="addTableCtrl.table.name">
-                <label for="table_name" class="grey-text text-darken-4">Naziv tabele</label>
+                <label for="table_name" class="text-primary-color text-darken-4">Naziv tabele</label>
               </div>
             </div>
           </div>
@@ -23,15 +23,15 @@
           <div class="row z-depth-1" ng-repeat="column in addTableCtrl.table.columns track by $index">
             <div class="col s2 m2 text-lighten-4 input-field">
               <input id="table_column" type="text" class="validate grey lighten-3" ng-model=column.columnName>
-              <label for="table_column" class="grey-text text-darken-4">Naziv kolone</label>
+              <label for="table_column" class="text-primary-color text-darken-4">Naziv kolone</label>
             </div>
             <div class="col s1 m2 text-lighten-4 input-field">
               <select id="select_tip" class="col s12 m12 grey lighten-3" ng-model="column.dataType" ng-options="type for type in addTableCtrl.dataTypes"></select>
-              <label for="select_tip" class="grey-text text-darken-4">Tip kolone </label>
+              <label for="select_tip" class="text-primary-color text-darken-4">Tip kolone </label>
             </div>
             <div class="col s1 m2 text-lighten-4 input-field">
               <select id="select_tip" class="col s12 m12 grey lighten-3" ng-model="column.keyType" ng-options="key for key in addTableCtrl.keyTypes"></select>
-              <label for="select_tip" class="grey-text text-darken-4">Tip kljuca </label>
+              <label for="select_tip" class="text-primary-color text-darken-4">Tip kljuca </label>
             </div>
             <div class="col s3 m3 offset-s1 offset-m1 ">
               <div class="row">
