--- a/bpDemo/src/main/resources/static/podstranice/addTablePage.html
+++ b/bpDemo/src/main/resources/static/podstranice/addTablePage.html
@@ -73,13 +73,12 @@
               </div>
             </div>
             <div class="col s1 m1">
-              <a class="btn-floating btn-large waves-effect waves-light deep-orange" ng-click="addTableCtrl.remove($index)"><i class="material-icons">delete</i></a>
+              <a class="btn-floating btn-large waves-effect waves-light accent-color" ng-click="addTableCtrl.remove($index)"><i class="material-icons">delete</i></a>
             </div>
           </div>
         </div>
-        <a class="waves-effect waves-light btn-large deep-orange right" ng-click="addTableCtrl.add()"><i class="material-icons right">add</i>Dodaj kolonu</a>
-        <a class="waves-effect waves-light btn-large deep-orange left" ng-click="addTableCtrl.createTable()"><i class="material-icons right">input</i>Kreiraj tabelu</a>
-        <button type="button" name="button" ng-click="addTableCtrl.ispisi()"> Ispisi </button>
+        <a class="waves-effect waves-light btn-large accent-color right" ng-click="addTableCtrl.add()"><i class="material-icons right">add</i>Dodaj kolonu</a>
+        <a class="waves-effect waves-light btn-large accent-color left" ng-click="addTableCtrl.createTable()"><i class="material-icons right">input</i>Kreiraj tabelu</a>
       </form>
     </div>
   </div>
